[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/human.gd" type="Script" id=1]
[ext_resource path="res://imgs/humans/spritesheet-sheet.png" type="Texture" id=2]
[ext_resource path="res://imgs/player/shadow.png" type="Texture" id=3]
[ext_resource path="res://imgs/texts/HamletOrNot.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/wander.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.8926
height = 2.93185

[sub_resource type="CircleShape2D" id=3]
radius = 14.9148

[sub_resource type="Animation" id=4]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79, 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86, 87, 88, 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79, 80 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86, 87, 88, 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.6, 1 ), Vector2( 1.7, 1 ), Vector2( 1.8, 1 ), Vector2( 1.8, 1 ), Vector2( 1.7, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.972549, 0.337255, 0.337255, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="OccluderPolygon2D" id=22]
polygon = PoolVector2Array( 9.10721, 30.8369, 5.88712, 27.259, 0.699196, 26.0068, -5.56209, 27.259, -8.0666, 31.3736, -6.2808, 34.8554, -0.0163803, 36.0248, 6.2449, 34.7725 )

[node name="human" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]
sort_enabled = false

[node name="pos3" type="Position2D" parent="YSort"]
position = Vector2( 0, 10 )

[node name="pos2" type="Position2D" parent="YSort"]
position = Vector2( 30, 30 )

[node name="pos4" type="Position2D" parent="YSort"]
position = Vector2( -30, 30 )

[node name="sprite" type="Sprite" parent="YSort"]
editor/display_folded = true
texture = ExtResource( 2 )
vframes = 10
hframes = 9
frame = 48
region_rect = Rect2( 0, 0, 64, 64 )

[node name="shadow" type="Sprite" parent="YSort/sprite"]
modulate = Color( 1, 1, 1, 0.5 )
show_behind_parent = true
position = Vector2( 0, 31.1682 )
scale = Vector2( 1.7, 1 )
texture = ExtResource( 3 )

[node name="pos1" type="Position2D" parent="YSort"]
position = Vector2( 0, 50 )

[node name="souls" type="Label" parent="."]
margin_left = -32.0
margin_top = -50.0
margin_right = 32.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 1 )
text = "20"
align = 1
valign = 1

[node name="enemy_hit" type="CollisionShape2D" parent="."]
position = Vector2( -0.35849, 31.1074 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="area_human" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_human"]
position = Vector2( 0, -0.166718 )
shape = SubResource( 3 )

[node name="wander" type="Timer" parent="."]
wait_time = 1.5
script = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/Attack_Down = SubResource( 4 )
anims/Attack_Left = SubResource( 5 )
anims/Attack_LeftDown = SubResource( 6 )
anims/Attack_LeftTop = SubResource( 7 )
anims/Attack_Right = SubResource( 8 )
anims/Attack_RightDown = SubResource( 9 )
anims/Attack_RightTop = SubResource( 10 )
anims/Attack_Up = SubResource( 11 )
anims/Idle_Down = SubResource( 12 )
anims/Idle_Left = SubResource( 13 )
anims/Idle_LeftDown = SubResource( 14 )
anims/Idle_LeftTop = SubResource( 15 )
anims/Idle_Right = SubResource( 16 )
anims/Idle_RightDown = SubResource( 17 )
anims/Idle_RightTop = SubResource( 18 )
anims/Idle_Up = SubResource( 19 )

[node name="effect" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 20 )
anims/death = SubResource( 21 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 22 )

[connection signal="area_entered" from="area_human" to="." method="_on_area_human_area_entered"]
[connection signal="area_exited" from="area_human" to="." method="_on_area_human_area_exited"]
[connection signal="timeout" from="wander" to="." method="_on_wander_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="effect" to="." method="_on_effect_animation_finished"]
